--- a/src/main/webapp/web/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/web/scripts/components/navbar/navbar.html
@@ -28,12 +28,12 @@
                         <span translate="global.menu.reservation">Reservation</span>
                     </a>
                 </li>
-<!--                 <li ui-sref-active="active" > -->
-<!--                     <a ui-sref="statistique"> -->
-<!--                         <span class="glyphicon glyphicon-dashboard"></span> -->
-<!--                         <span translate="global.menu.statistique">statistique</span> -->
-<!--                     </a> -->
-<!--                 </li> -->
+                <li  >
+                    <a href="http://portal.proxym-it.tn:8080/portal/intranet/">
+                        <span class="glyphicon glyphicon-dashboard"></span>
+                        <span >EXO</span>
+                    </a>
+                </li>
 <!--                 <li ui-sref-active="active" class="dropdown pointer" ng-controller="LanguageController"> -->
 <!--                     <a class="dropdown-toggle" data-toggle="dropdown" href=""> -->
 <!--                                 <span> -->
